syntax = "proto3";

package todoproto;

import "v1/item.proto";
// import "v1/user.proto";

message ErrorResponse {
    string message = 1;
    uint32 code = 2;
}
// Interface exported by the server.
service Todo {
    // Items
	rpc GetItem (GetItemRequest) returns (GetItemResponse) {}
	rpc GetItemCount (ItemListRequest) returns (ItemCountResponse) {}
	rpc GetItems (ItemListRequest) returns (ItemListResponse) {}
	rpc CreateItem (CreateItemRequest) returns (CreateItemResponse) {}
	rpc UpdateItem (UpdateItemRequest) returns (UpdateItemResponse) {}
	rpc DeleteItem (DeleteItemRequest) returns (ErrorResponse) {}
}
